# jfox

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_PLAN.md  README.md  SESSION.md  SESSION_SUMMARY.md  benchmark_gpu.py  benchmark_large.py  issue-7-simplify.md  issue17.md  issue18.md  issue19.md  issue20.md  issue21.md  issue22.md  issue9_final.md  issue_comment.md  jessica-jones-static-cable.md  npu-verification-report.md  pyproject.toml  pytest.ini  run_full_test.ps1  test_npu.py  test_npu_basic.py
.claude/: settings.local.json
.githooks/: pre-push
.github/workflows/: integration-test.yml  publish.yml
docs/: installation.md  troubleshooting.md
jfox/: __init__.py  bm25_index.py  cli.py  config.py  embedding_backend.py  formatters.py  git_extractor.py  global_config.py  graph.py  indexer.py  kb_manager.py  model_downloader.py  models.py  note.py  note_index.py  performance.py  search_engine.py  template.py  template_cli.py  vector_store.py
jfox/daemon/: __init__.py  __main__.py  client.py  process.py  server.py
scripts/: download-model-intranet.sh
skill/: README.md  SKILL.md
skill/evals/: evals.json
skill/knowledge-base-notes/: SKILL.md
skill/knowledge-base-workspace/: SKILL.md
skills-recommend/: README.md
tests/: COVERAGE_PLAN.md  MIGRATION.md  TESTS.md  conftest.py  test_advanced_features.py  test_cli_format.py  test_config_set_unit.py  test_config_unit.py  test_content_file.py  test_core_workflow.py  test_embedding_device.py  test_hybrid_search.py  test_integration.py  test_kb_current.py  test_suggest_links.py
tests/integration/: test_backlinks.py  test_model_download.py  test_tag_filter_cli.py
tests/performance/: test_performance.py
tests/unit/: test_atomic_write.py  test_bm25_batch.py  test_check.py  test_content_file.py  test_daemon_process.py  test_edit.py  test_format_unify.py  test_formatters.py  test_git_extractor.py  test_global_config.py  test_index_kb_param.py  test_indexer_clear_before_rebuild.py  test_indexer_verify.py  test_kb_manager.py  test_lazy_import.py  test_list_notes_skip.py  (+10 more)
zk-cli/: .gitignore  README.md  SESSION.md  coverage_analysis_report.md  pyproject.toml  requirements.txt  run_full_test.ps1  test_backlink_quick.py  verify_backlink.py
zk-cli/tests/: TESTS.md  conftest.py  test_advanced_features.py  test_backlinks.py  test_cli_format.py  test_config_unit.py  test_core_workflow.py  test_formatters.py  test_global_config_unit.py  test_hybrid_search.py  test_integration.py  test_kb_manager_unit.py  test_mcp_server_extended.py  test_performance_unit.py  test_suggest_links.py  test_template.py  test_template_cli_unit.py
zk-cli/tests/performance/: test_performance.py
zk-cli/tests/unit/: test_formatters.py  test_global_config.py  test_kb_manager.py  test_template.py  test_template_cli.py
zk-cli/tests/utils/: assertions.py  note_generator.py  temp_kb.py  zk_cli.py
zk-cli/zk/: __init__.py  __main__.py  cli.py  config.py  embedding_backend.py  formatters.py  global_config.py  graph.py  indexer.py  kb_manager.py  mcp_server.py  models.py  note.py  npu_backend.py  performance.py  requirements.txt  template.py  template_cli.py  vector_store.py
(+68 files in other folders)
