[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zk-cli"
version = "0.1.0"
description = "Zettelkasten 知识管理 CLI 工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "User", email = "user@example.com"}
]
keywords = ["zettelkasten", "knowledge-management", "note-taking", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "sentence-transformers>=3.0",
    "openvino>=2025.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
zk = "zk.cli:app"

[project.urls]
Homepage = "https://github.com/zhuxixi/jfox"
Repository = "https://github.com/zhuxixi/jfox"

[tool.hatch.build.targets.wheel]
packages = ["zk"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
